--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,10 @@ services:
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: user
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MySQL8Dialect
+      SPRING_JPA_DATABASE_PLATFORM: use org.hibernate.dialect.MySQLDialect
       JWT_SECRET: qrtKisXDK5Zhr0wSxiA4BN2RElr3qTndF3GOzQhchNA
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
+      SPRING_JPA_OPEN_IN_VIEW: false
 
     depends_on:
       - mysql
