--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   mysql:
@@ -15,11 +14,12 @@ services:
       - mysql_data:/var/lib/mysql
 
   spring-boot-app:
-    image: sfarahmedkhalil/livrili:1.2
+    image: sfarahmedkhalil/livrili:1.5
     container_name: spring_boot_app
     ports:
       - "8080:8080"
     environment:
+      SERVER_PORT: 8080
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql_db:3306/livrili
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: user
