--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Livrili
-server.port =8181
+server.port =8080
 spring.datasource.url=jdbc:mysql://localhost:3306/livrili
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=sfar
-spring.jpa.hibernate.ddl-auto =create-drop
+spring.jpa.hibernate.ddl-auto =update
 
 
 spring.jpa.show-sql=false
