--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=Livrili
 server.port =8080
 spring.datasource.url=jdbc:mysql://localhost:3306/livrili
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=sfar
+spring.datasource.username=your db username
+spring.datasource.password=your db password
 spring.jpa.hibernate.ddl-auto =update
 
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-jwt.secret = qrtKisXDK5Zhr0wSxiA4BN2RElr3qTndF3GOzQhchNA=
+jwt.secret = qrtKisXDK5Zhr0wSxiA4BN2RElr3qTndF3GOzQhchNA= 
 
