--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Livrili
 server.port =8080
 spring.datasource.url=jdbc:mysql://localhost:3306/livrili
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=your db username
-spring.datasource.password=your db password
-spring.jpa.hibernate.ddl-auto =update
+spring.datasource.username=user
+spring.datasource.password=user
+pring.jpa.hibernate.ddl-auto =update
 
 
 spring.jpa.show-sql=false
